--- a/new.html
+++ b/new.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <form>
-        <input type="text" placeholder="Nombre">
-        <input type="text" placeholder="Apellido">
-        <input type="number" placeholder="Telefono">
-        <input type="number" placeholder="DNI">
-        <input type="text" placeholder="Email">
+        <label>Nombre</label>
+        <input type="text" id="nombre" placeholder="Nombre">
+        <label>Apellido</label>
+        <input type="text" id="apellido" placeholder="Apellido">
+        <input type="number" id="telefono" placeholder="Telefono">
+        <input type="text" id="email" placeholder="Email">
+        <button type="button">Guardar</button>
     </form>
-    <button>Guardar</button>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="/javascript/new.js"></script>
 </body>
 </html>
