edité archivos y comenté los js para que se entienda mejor :D

--- a/new.html
+++ b/new.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Nuevo Usuario</title>
 </head>
 <body>
     <form>
-        <label>Nombre</label>
+        <label>Nombre:</label>
         <input type="text" id="nombre" placeholder="Nombre">
-        <label>Apellido</label>
+        <label>Apellido:</label>
         <input type="text" id="apellido" placeholder="Apellido">
-        <input type="number" id="telefono" placeholder="Telefono">
+        <label>Teléfono:</label>
+        <input type="number" id="telefono" placeholder="Teléfono">
+        <label>Email:</label>
         <input type="text" id="email" placeholder="Email">
         <button type="button">Guardar</button>
     </form>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/javascript/new.js"></script>
 </body>
