--- a/edit.html
+++ b/edit.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <title>Edit User</title>
+    <title>Editar Usuario</title>
   </head>
   <body>
-    <h1>Edit User</h1>
+    <h1>Editar Usuario</h1>
     <form>
-    <input type="text" maxlength="30" placeholder="Nombre" name="nombre">
-    <input type="text" maxlength="30" placeholder="Apellido" name="apellido">
-    <input type="text" placeholder="Email" name="email">
-    <input type="text" placeholder="Telefono" name="telefono">
-    <button type="button">Guardar Cambios</button>
-  </form>
+        <label>Nombre:</label>
+        <input type="text" maxlength="30" placeholder="Nombre" name="nombre">
+        <label>Apellido:</label>
+        <input type="text" maxlength="30" placeholder="Apellido" name="apellido">
+        <label>Email:</label>
+        <input type="text" placeholder="Email" name="email">
+        <label>Teléfono:</label>
+        <input type="text" placeholder="Teléfono" name="telefono">
+        <button type="button">Guardar Cambios</button>
+    </form>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script  src="/javascript/edit.js"></script>
   </body>
