--- a/edit.html
+++ b/edit.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/css/styles.css">
     <title>Editar Usuario</title>
   </head>
   <body>
     <h1>Editar Usuario</h1>
     <form>
-        <label>Nombre:</label>
-        <input type="text" maxlength="30" placeholder="Nombre" name="nombre">
-        <label>Apellido:</label>
-        <input type="text" maxlength="30" placeholder="Apellido" name="apellido">
-        <label>Email:</label>
-        <input type="text" placeholder="Email" name="email">
-        <label>Teléfono:</label>
-        <input type="text" placeholder="Teléfono" name="telefono">
+        <label>Nombre:</label><br>
+        <input type="text" maxlength="30" placeholder="Nombre" name="nombre"><br>
+        <label>Apellido:</label><br>
+        <input type="text" maxlength="30" placeholder="Apellido" name="apellido"><br>
+        <label>Email:</label><br>
+        <input type="text" placeholder="Email" name="email"><br>
+        <label>Teléfono:</label><br>
+        <input type="text" placeholder="Teléfono" name="telefono"><br>
         <button type="button">Guardar Cambios</button>
     </form>
 
