--- a/new.html
+++ b/new.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nuevo Usuario</title>
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/css/styles.css">
+    <title>Crear Nuevo Usuario</title>
 </head>
 <body>
+    <h1>Crear Nuevo Usuario</h1>
     <form>
-        <label>Nombre:</label>
-        <input type="text" id="nombre" placeholder="Nombre">
-        <label>Apellido:</label>
-        <input type="text" id="apellido" placeholder="Apellido">
-        <label>Teléfono:</label>
-        <input type="number" id="telefono" placeholder="Teléfono">
-        <label>Email:</label>
-        <input type="text" id="email" placeholder="Email">
+        <label>Nombre:</label><br>
+        <input type="text" id="nombre" placeholder="Nombre"><br>
+        <label>Apellido:</label><br>
+        <input type="text" id="apellido" placeholder="Apellido"><br>
+        <label>Teléfono:</label><br>
+        <input type="number" id="telefono" placeholder="Teléfono"><br>
+        <label>Email:</label><br>
+        <input type="text" id="email" placeholder="Email"><br>
         <button type="button">Guardar</button>
     </form>
-    
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/javascript/new.js"></script>
 </body>
