--- a/test.html
+++ b/test.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/css/styles.css">
     <title>Test</title>
 </head>
 <body>
-    
+    <h1>Página de Prueba</h1>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/javascript/test.js"></script>
 </body>
 </html>
