--- a/users.html
+++ b/users.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Users Management</title>
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/css/styles.css">
+    <title>Gestión de Usuarios</title>
 </head>
 <body>
+    <h1>Gestión de Usuarios</h1>
     <table id="table-users" class="table"></table>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
