tiene un error en flitrar usuarios

--- a/users.html
+++ b/users.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/css/styles.css">
     <title>Gestión de Usuarios</title>
 </head>
 <body>
-    <h1>Gestión de Usuarios</h1>
+    <h1>Gestión de Usuarios <i class="far fa-address-book"></i></h1>
+    <form>
+        <input type="text" id="filtrar-users" placeholder="Filtrar Usuarios">
+        <button type="button" id="filtrar">Filtrar</button>
+    </form>
     <table id="table-users" class="table"></table>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
