--- a/edit.html
+++ b/edit.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/css/styles.css">
     <title>Editar Usuario</title>
   </head>
   <body>
-    <h1>Editar Usuario</h1>
+    <h1>Editar Usuario <i class="fas fa-users-cog"></i></h1>
     <form>
         <label>Nombre:</label><br>
         <input type="text" maxlength="30" placeholder="Nombre" name="nombre"><br>
